# shipshape

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SHIPSHAPE_CHECKLIST.md  USAGE.md  docker-compose.yml
.githooks/: pre-commit
.github/workflows/: ci.yml
scripts/: update-coverage-badges.py
shipshape-cli/: Cargo.toml
shipshape-cli/src/: auth.rs  main.rs
shipshape-core/: Cargo.toml
shipshape-core/src/: domain.rs  drydock.rs  error.rs  fs.rs  inspector.rs  lib.rs  mechanic.rs  mechanics.rs  pr_template.rs  report.rs
shipshape-server/: Cargo.toml  Dockerfile
shipshape-server/migrations/20260213000000_create_workflows/: up.sql
shipshape-server/migrations/20260213000100_create_core_tables/: down.sql  up.sql
shipshape-server/migrations/20260213000200_create_auth_tables/: down.sql  up.sql
shipshape-server/src/: crypto.rs  db.rs  main.rs  models.rs  openapi.rs  routes.rs  schema.rs  workflows.rs
shipshape-server/tests/: dockerfile.rs
shipshape-ui/: angular.json  karma.conf.cjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
shipshape-ui/coverage/shipshape-ui/: index.html
shipshape-ui/coverage/shipshape-ui/src/: index.html  main.ts.html  test.ts.html
shipshape-ui/e2e/: workflow.spec.ts
shipshape-ui/src/: index.html  main.spec.ts  main.ts  styles.css
shipshape-ui/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.routes.spec.ts  app.routes.ts
shipshape-ui/src/app/services/: api.models.ts  api.service.spec.ts  api.service.ts  auth.guard.spec.ts  auth.guard.ts  (+5 more)
(+67 files in other folders)
