[package]
name = "shipshape-cli"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shipshape-core = { path = "../shipshape-core" }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "process", "fs", "sync", "time"] }
