[package]
name = "shipshape-server"
version = "0.0.1"
edition = "2024"

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1.6", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
ring = "0.17.14"
reqwest = { version = "0.12.5", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shipshape-core = { path = "../shipshape-core" }
utoipa = "4.2.3"
urlencoding = "2.1.3"
uuid = { version = "1.7", features = ["serde", "v4"] }
log = "0.4.29"
env_logger = "0.8.4"

[dev-dependencies]
httpmock = "0.7.0"
